src/freeRTOS/wrapper.rs

unsafe extern "C" {
    #[doc = " task. h\n @code{c}\n BaseType_t xTaskDelayUntil( TickType_t *pxPreviousWakeTime, const TickType_t xTimeIncrement );\n @endcode\n\n INCLUDE_xTaskDelayUntil must be defined as 1 for this function to be available.\n See the configuration section for more information.\n\n Delay a task until a specified time.  This function can be used by periodic\n tasks to ensure a constant execution frequency.\n\n This function differs from vTaskDelay () in one important aspect:  vTaskDelay () will\n cause a task to block for the specified number of ticks from the time vTaskDelay () is\n called.  It is therefore difficult to use vTaskDelay () by itself to generate a fixed\n execution frequency as the time between a task starting to execute and that task\n calling vTaskDelay () may not be fixed [the task may take a different path though the\n code between calls, or may get interrupted or preempted a different number of times\n each time it executes].\n\n Whereas vTaskDelay () specifies a wake time relative to the time at which the function\n is called, xTaskDelayUntil () specifies the absolute (exact) time at which it wishes to\n unblock.\n\n The macro pdMS_TO_TICKS() can be used to calculate the number of ticks from a\n time specified in milliseconds with a resolution of one tick period.\n\n @param pxPreviousWakeTime Pointer to a variable that holds the time at which the\n task was last unblocked.  The variable must be initialised with the current time\n prior to its first use (see the example below).  Following this the variable is\n automatically updated within xTaskDelayUntil ().\n\n @param xTimeIncrement The cycle time period.  The task will be unblocked at\n time *pxPreviousWakeTime + xTimeIncrement.  Calling xTaskDelayUntil with the\n same xTimeIncrement parameter value will cause the task to execute with\n a fixed interface period.\n\n @return Value which can be used to check whether the task was actually delayed.\n Will be pdTRUE if the task way delayed and pdFALSE otherwise.  A task will not\n be delayed if the next expected wake time is in the past.\n\n Example usage:\n @code{c}\n // Perform an action every 10 ticks.\n void vTaskFunction( void * pvParameters )\n {\n TickType_t xLastWakeTime;\n const TickType_t xFrequency = 10;\n BaseType_t xWasDelayed;\n\n     // Initialise the xLastWakeTime variable with the current time.\n     xLastWakeTime = xTaskGetTickCount ();\n     for( ;; )\n     {\n         // Wait for the next cycle.\n         xWasDelayed = xTaskDelayUntil( &xLastWakeTime, xFrequency );\n\n         // Perform action here. xWasDelayed value can be used to determine\n         // whether a deadline was missed if the code here took too long.\n     }\n }\n @endcode\n \\defgroup xTaskDelayUntil xTaskDelayUntil\n \\ingroup TaskCtrl"]
    pub fn xTaskDelayUntil(
        pxPreviousWakeTime: *mut TickType_t,
        xTimeIncrement: TickType_t,
    ) -> BaseType_t;
}
unsafe extern "C" {
    #[doc = " task. h\n @code{c}\n UBaseType_t uxTaskPriorityGet( const TaskHandle_t xTask );\n @endcode\n\n INCLUDE_uxTaskPriorityGet must be defined as 1 for this function to be available.\n See the configuration section for more information.\n\n Obtain the priority of any task.\n\n @param xTask Handle of the task to be queried.  Passing a NULL\n handle results in the priority of the calling task being returned.\n\n @return The priority of xTask.\n\n Example usage:\n @code{c}\n void vAFunction( void )\n {\n TaskHandle_t xHandle;\n\n   // Create a task, storing the handle.\n   xTaskCreate( vTaskCode, \"NAME\", STACK_SIZE, NULL, tskIDLE_PRIORITY, &xHandle );\n\n   // ...\n\n   // Use the handle to obtain the priority of the created task.\n   // It was created with tskIDLE_PRIORITY, but may have changed\n   // it itself.\n   if( uxTaskPriorityGet( xHandle ) != tskIDLE_PRIORITY )\n   {\n       // The task has changed it's priority.\n   }\n\n   // ...\n\n   // Is our priority higher than the created task?\n   if( uxTaskPriorityGet( xHandle ) < uxTaskPriorityGet( NULL ) )\n   {\n       // Our priority (obtained using NULL handle) is higher.\n   }\n }\n @endcode\n \\defgroup uxTaskPriorityGet uxTaskPriorityGet\n \\ingroup TaskCtrl"]
    pub fn uxTaskPriorityGet(xTask: TaskHandle_t) -> UBaseType_t;
}
unsafe extern "C" {
    #[doc = " task. h\n @code{c}\n UBaseType_t uxTaskPriorityGetFromISR( const TaskHandle_t xTask );\n @endcode\n\n A version of uxTaskPriorityGet() that can be used from an ISR."]
    pub fn uxTaskPriorityGetFromISR(xTask: TaskHandle_t) -> UBaseType_t;
}
unsafe extern "C" {
    #[doc = " task. h\n @code{c}\n UBaseType_t uxTaskBasePriorityGet( const TaskHandle_t xTask );\n @endcode\n\n INCLUDE_uxTaskPriorityGet and configUSE_MUTEXES must be defined as 1 for this\n function to be available. See the configuration section for more information.\n\n Obtain the base priority of any task.\n\n @param xTask Handle of the task to be queried.  Passing a NULL\n handle results in the base priority of the calling task being returned.\n\n @return The base priority of xTask.\n\n \\defgroup uxTaskPriorityGet uxTaskBasePriorityGet\n \\ingroup TaskCtrl"]
    pub fn uxTaskBasePriorityGet(xTask: TaskHandle_t) -> UBaseType_t;
}
unsafe extern "C" {
    #[doc = " task. h\n @code{c}\n UBaseType_t uxTaskBasePriorityGetFromISR( const TaskHandle_t xTask );\n @endcode\n\n A version of uxTaskBasePriorityGet() that can be used from an ISR."]
    pub fn uxTaskBasePriorityGetFromISR(xTask: TaskHandle_t) -> UBaseType_t;
}
unsafe extern "C" {
    #[doc = " task. h\n @code{c}\n void vTaskPrioritySet( TaskHandle_t xTask, UBaseType_t uxNewPriority );\n @endcode\n\n INCLUDE_vTaskPrioritySet must be defined as 1 for this function to be available.\n See the configuration section for more information.\n\n Set the priority of any task.\n\n A context switch will occur before the function returns if the priority\n being set is higher than the currently executing task.\n\n @param xTask Handle to the task for which the priority is being set.\n Passing a NULL handle results in the priority of the calling task being set.\n\n @param uxNewPriority The priority to which the task will be set.\n\n Example usage:\n @code{c}\n void vAFunction( void )\n {\n TaskHandle_t xHandle;\n\n   // Create a task, storing the handle.\n   xTaskCreate( vTaskCode, \"NAME\", STACK_SIZE, NULL, tskIDLE_PRIORITY, &xHandle );\n\n   // ...\n\n   // Use the handle to raise the priority of the created task.\n   vTaskPrioritySet( xHandle, tskIDLE_PRIORITY + 1 );\n\n   // ...\n\n   // Use a NULL handle to raise our priority to the same value.\n   vTaskPrioritySet( NULL, tskIDLE_PRIORITY + 1 );\n }\n @endcode\n \\defgroup vTaskPrioritySet vTaskPrioritySet\n \\ingroup TaskCtrl"]
    pub fn vTaskPrioritySet(xTask: TaskHandle_t, uxNewPriority: UBaseType_t);
}
unsafe extern "C" {
    #[doc = " task. h\n @code{c}\n void vTaskSuspend( TaskHandle_t xTaskToSuspend );\n @endcode\n\n INCLUDE_vTaskSuspend must be defined as 1 for this function to be available.\n See the configuration section for more information.\n\n Suspend any task.  When suspended a task will never get any microcontroller\n processing time, no matter what its priority.\n\n Calls to vTaskSuspend are not accumulative -\n i.e. calling vTaskSuspend () twice on the same task still only requires one\n call to vTaskResume () to ready the suspended task.\n\n @param xTaskToSuspend Handle to the task being suspended.  Passing a NULL\n handle will cause the calling task to be suspended.\n\n Example usage:\n @code{c}\n void vAFunction( void )\n {\n TaskHandle_t xHandle;\n\n   // Create a task, storing the handle.\n   xTaskCreate( vTaskCode, \"NAME\", STACK_SIZE, NULL, tskIDLE_PRIORITY, &xHandle );\n\n   // ...\n\n   // Use the handle to suspend the created task.\n   vTaskSuspend( xHandle );\n\n   // ...\n\n   // The created task will not run during this period, unless\n   // another task calls vTaskResume( xHandle ).\n\n   //...\n\n\n   // Suspend ourselves.\n   vTaskSuspend( NULL );\n\n   // We cannot get here unless another task calls vTaskResume\n   // with our handle as the parameter.\n }\n @endcode\n \\defgroup vTaskSuspend vTaskSuspend\n \\ingroup TaskCtrl"]
    pub fn vTaskSuspend(xTaskToSuspend: TaskHandle_t);
}
unsafe extern "C" {
    #[doc = " task. h\n @code{c}\n void vTaskResume( TaskHandle_t xTaskToResume );\n @endcode\n\n INCLUDE_vTaskSuspend must be defined as 1 for this function to be available.\n See the configuration section for more information.\n\n Resumes a suspended task.\n\n A task that has been suspended by one or more calls to vTaskSuspend ()\n will be made available for running again by a single call to\n vTaskResume ().\n\n @param xTaskToResume Handle to the task being readied.\n\n Example usage:\n @code{c}\n void vAFunction( void )\n {\n TaskHandle_t xHandle;\n\n   // Create a task, storing the handle.\n   xTaskCreate( vTaskCode, \"NAME\", STACK_SIZE, NULL, tskIDLE_PRIORITY, &xHandle );\n\n   // ...\n\n   // Use the handle to suspend the created task.\n   vTaskSuspend( xHandle );\n\n   // ...\n\n   // The created task will not run during this period, unless\n   // another task calls vTaskResume( xHandle ).\n\n   //...\n\n\n   // Resume the suspended task ourselves.\n   vTaskResume( xHandle );\n\n   // The created task will once again get microcontroller processing\n   // time in accordance with its priority within the system.\n }\n @endcode\n \\defgroup vTaskResume vTaskResume\n \\ingroup TaskCtrl"]
    pub fn vTaskResume(xTaskToResume: TaskHandle_t);
}
unsafe extern "C" {
    #[doc = " task. h\n @code{c}\n void xTaskResumeFromISR( TaskHandle_t xTaskToResume );\n @endcode\n\n INCLUDE_xTaskResumeFromISR must be defined as 1 for this function to be\n available.  See the configuration section for more information.\n\n An implementation of vTaskResume() that can be called from within an ISR.\n\n A task that has been suspended by one or more calls to vTaskSuspend ()\n will be made available for running again by a single call to\n xTaskResumeFromISR ().\n\n xTaskResumeFromISR() should not be used to synchronise a task with an\n interrupt if there is a chance that the interrupt could arrive prior to the\n task being suspended - as this can lead to interrupts being missed. Use of a\n semaphore as a synchronisation mechanism would avoid this eventuality.\n\n @param xTaskToResume Handle to the task being readied.\n\n @return pdTRUE if resuming the task should result in a context switch,\n otherwise pdFALSE. This is used by the ISR to determine if a context switch\n may be required following the ISR.\n\n \\defgroup vTaskResumeFromISR vTaskResumeFromISR\n \\ingroup TaskCtrl"]
    pub fn xTaskResumeFromISR(xTaskToResume: TaskHandle_t) -> BaseType_t;
}
unsafe extern "C" {
    #[doc = " task. h\n @code{c}\n void vTaskStartScheduler( void );\n @endcode\n\n Starts the real time kernel tick processing.  After calling the kernel\n has control over which tasks are executed and when.\n\n See the demo application file main.c for an example of creating\n tasks and starting the kernel.\n\n Example usage:\n @code{c}\n void vAFunction( void )\n {\n   // Create at least one task before starting the kernel.\n   xTaskCreate( vTaskCode, \"NAME\", STACK_SIZE, NULL, tskIDLE_PRIORITY, NULL );\n\n   // Start the real time kernel with preemption.\n   vTaskStartScheduler ();\n\n   // Will not get here unless a task calls vTaskEndScheduler ()\n }\n @endcode\n\n \\defgroup vTaskStartScheduler vTaskStartScheduler\n \\ingroup SchedulerControl"]
    pub fn vTaskStartScheduler();
}
